@@ -5,11 +5,7 @@ prefs[:mailcatcher] = true if config['mailcatcher']
 prefs[:mail_view] = true if config['mail_view']
 
 if prefs[:mailcatcher]
-  if rails_4?
-    add_gem 'mailcatcher', github: 'sj26/mailcatcher', group: :development
-  else
-    add_gem 'mailcatcher', group: :development
-  end
+  add_gem 'mailcatcher', group: :development
 end
 add_gem 'mail_view', group: :development if prefs[:mail_view]
 
@@ -49,7 +45,7 @@ class MailPreview < MailView
   #def invitation
   #  account = Account.first
   #  inviter, invitee = account.users[0, 2]
-  #  Notifier.invitation(inviter, invitee) 
+  #  Notifier.invitation(inviter, invitee)
   #end
 
   # Factory-like pattern
