@@ -24,6 +24,7 @@ if prefer :apps4, 'learn-rails'
   prefs[:secrets] = ['owner_email', 'mailchimp_list_id', 'mailchimp_api_key']
   prefs[:templates] = 'erb'
   prefs[:tests] = false
+  prefs[:pages] = 'none'
 
   # gems
   add_gem 'activerecord-tableless'
